--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "appwrite": "^13.0.0",
     "core-js": "^3.25.3",
-    "nuxt": "^2.15.8",
+    "nuxt": "^3.7.4",
     "vue": "^2.7.10",
     "vue-server-renderer": "^2.7.10",
     "vue-template-compiler": "^2.7.10"
@@ -18,6 +19,7 @@
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^5.3.3",
     "autoprefixer": "^10.4.16",
+    "node": "^20.0.0",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.3"
   }
