--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "type": "commonjs",
   "name": "src",
   "version": "1.0.0",
   "private": true,
@@ -9,9 +10,17 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "apollo-cache-inmemory": "^1.6.6",
+    "apollo-client": "^2.6.10",
+    "apollo-link-context": "^1.0.20",
+    "apollo-link-http": "^1.5.17",
     "core-js": "^3.25.3",
+    "graphql": "^15.8.0",
+    "graphql-tag": "^2.12.6",
+    "node-fetch": "2.6.7",
     "nuxt": "^2.15.8",
     "vue": "^2.7.10",
+    "vue-apollo": "^3.1.1",
     "vue-server-renderer": "^2.7.10",
     "vue-template-compiler": "^2.7.10"
   },
